          from MKL, it is no longer possible to link against Pardiso from
          pardiso-project.org. Pardiso from MKL can be selected via
          linear_solver=pardisomkl. configure option --disable-pardisomkl
          can be used to disable the check for MKL Pardiso. Options that
          influence Pardiso from MKL are named pardisomkl_msglvl,
          pardisomkl_order, etc.
        - Detailed timing statistics are not longer collected by default.
          To reenable, set the new option timing_statistics to yes or set
          the option print_timing_statistics to yes [#299].
        - Added documentation on some available expert C preprocessor flags.

2021-0x-yy: 3.13.5
        - Allow to use --without-pardiso to disable check for MKL Pardiso [#454]
          (note: name of this option will change to --disable-pardisomkl
          with Ipopt 3.14)

2021-02-24: 3.13.4
        - Fixed a linking issue for ipopt_sens [#418]
        - Fixed Makefile for Java example regarding location of jar file
        - Fixed build of R interface if using -fvisibility=hidden.

2020-10-16: 3.13.3
        - Members of AmplTNLP class are now protected instead of private.
        - Updated Eclipse Public License from 1.0 to 2.0.
        - Fixed dangling pointer problems with Journalist used for debugging
          (--with-ipopt-verbosity > 0) when more than one IpoptApplication
          is used. [#393, thanks to Brad Bell]
        - Fixed build problem when using HSL library that does not include
          MA27, MA57, or MC19. [#395]
        - Added example recursive_nlp that uses Ipopt to solves an
          optimization problem for the evaluation of the objective function.
          [contributed by Brad Bell]
        - Fixed build of linear-solver loader on Windows [#408]

2020-04-30: 3.13.2
        - The C-preprocessor defines COIN_IPOPT_CHECKLEVEL,
          COIN_IPOPT_VERBOSITY, and FORTRAN_INTEGER_TYPE, which are defined