@@ -106,6 +106,9 @@ private:
    /** Constraint violation tolerance */
    Number constr_viol_tol_;
 
+   /** Time limit */
+   Number max_cpu_time_;
+
    /** Primal infeasibility tolerance for declaring failure of
     *  restoration phase when the non-regular termination tests are
     *  met.
